--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h2 {
 }
 
 .dream-area {
-    background-image: url(/images/dream-bg.png);
+    background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -62,7 +62,7 @@ h2 {
 }
 
 .experience {
-    background-image: url(/images/exp-bg.png);
+    background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-size: auto;
     background-position: left;
